--- a/index.html
+++ b/index.html
@@ -3,10 +3,208 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gaming Website</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts.js" defer></script>
+<style>
+    /* styles.css */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #101010;
+    color: white;
+}
+
+header {
+    background-color: #333;
+    padding: 10px;
+}
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+nav .logo h1 {
+    font-size: 30px;
+}
+
+nav .nav-links {
+    list-style-type: none;
+    display: flex;
+}
+
+nav .nav-links li {
+    margin-left: 20px;
+}
+
+nav .nav-links li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+}
+
+#home {
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-image: url('gaming-background.jpg');
+    background-size: cover;
+}
+
+#home h2 {
+    font-size: 50px;
+}
+
+#play-button {
+    background-color: #ff6347;
+    padding: 10px 20px;
+    border: none;
+    font-size: 18px;
+    color: white;
+    cursor: pointer;
+    margin-top: 20px;
+}
+
+#games {
+    padding: 40px;
+    background-color: #222;
+}
+
+.game-list {
+    display: flex;
+    justify-content: space-around;
+}
+
+.game-item {
+    text-align: center;
+}
+
+.game-item img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+#about, #contact {
+    padding: 40px;
+    background-color: #333;
+}
+
+.about-section {
+    text-align: center;
+}
+
+.contact-form {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.contact-form input,
+.contact-form textarea {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+}
+
+.contact-form button {
+    background-color: #ff6347;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+footer {
+    background-color: #222;
+    text-align: center;
+    padding: 10px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+</style>
 </head>
 <body>
-    <h1>home</h1>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <h1>GameHub</h1>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#games">Games</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section id="home">
+        <div class="hero">
+            <h2>Welcome to GameHub</h2>
+            <p>Your Ultimate Gaming Experience</p>
+            <button id="play-button">Play Now</button>
+        </div>
+    </section>
+
+    <section id="games">
+        <div class="game-list">
+            <h3>Featured Games</h3>
+            <div class="game-item">
+                <img src="game1.jpg" alt="Game 1">
+                <p>Game 1</p>
+            </div>
+            <div class="game-item">
+                <img src="game2.jpg" alt="Game 2">
+                <p>Game 2</p>
+            </div>
+            <div class="game-item">
+                <img src="game3.jpg" alt="Game 3">
+                <p>Game 3</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="about">
+        <div class="about-section">
+            <h3>About Us</h3>
+            <p>GameHub is the place where gamers connect, explore, and enjoy the best games!</p>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="contact-form">
+            <h3>Contact Us</h3>
+            <form action="/submit-contact" method="POST">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message:</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 GameHub. All rights reserved.</p>
+    </footer>
+    <script>// scripts.js
+        document.getElementById("play-button").addEventListener("click", function() {
+            alert("Starting your game...");
+            // Add game launch code here, e.g., redirecting to a game page or starting a game.
+        });
+        </script>
 </body>
 </html>
